--- a/gi-pro-mobile/www/templates/include_professional.html
+++ b/gi-pro-mobile/www/templates/include_professional.html
@@ -22,7 +22,9 @@
     <div class="item item-icon-left" ng-class="{'item-input': editingProfile}">
       <i class="icon ion-ios-location"></i>
       <div ng-if="!editingProfile">{{edit.address}}</div>
-      <placeautocomplete ng-if="editingProfile" ng-model="edit.address" attr-placeholder="{{'address_placeholder' | translate}}" click-activation="false" data="places" on-type="typePlace" placeholder="{{'service_address_placeholder' | translate}}" on-select="selectAddress"></placeautocomplete>
+      <placeautocomplete ng-if="editingProfile" ng-model="edit.address" attr-placeholder="{{'address_placeholder' | translate}}"
+        click-activation="false" data="places" on-type="typePlace" placeholder="{{'service_address_placeholder' | translate}}"
+        on-select="selectProfessionalAddress"></placeautocomplete>
       <button ng-if="editingProfile" class="button button-clear button-stable button-icon icon ion-close-circled" ng-click="edit.address = ''"></button>
     </div>
     <!-- Phones -->
