--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -12,7 +12,7 @@
         <input type="search" ng-model="searchBar.searchString" placeholder="{{'search_professionals' | translate}}">
       </div>
       <button class="button button-clear button-icon ion-close" ng-click="searchBar.searchString = ''" ng-show="searchBar.show"></button>
-      <button class="button button-clear button-icon ion-search" ng-click="toggleSearchBar()" ng-show="!searchBar.show && (activeTab == 'professionals')"></button>
+      <button class="button button-clear button-icon ion-search" ng-click="toggleSearchBar()" ng-show="!searchBar.show && (activeTab == 'professionals')" ng-disabled="false"></button>
       <!-- not in this phase -->
       <!--<button class="button button-icon button-clear ion-android-funnel" ng-click="orderServices()" ng-hide="professionalTab"></button>-->
       <button class="button button-clear button-icon" ng-class="{'ion-map': viewAsList, 'ion-ios-list-outline': !viewAsList}" ng-click="switchToMap()"
