--- a/gi-pro-web/src/main/resources/templates/reset_en.html
+++ b/gi-pro-web/src/main/resources/templates/reset_en.html
@@ -9,7 +9,7 @@
       Dear  <span data-th-text="${user.name}">Mario</span> <span data-th-text="${user.surname}">Rossi</span>, 
     </p>
     <p>
-      You password for <b>GiPro</b> has been reset.
+      You password for <b>Smart GiPro</b> has been reset.
     </p>
     <p>In order to update your credentials, click <a href="http://smartcommunitylab.it/" th:href="${url}">here</a>.</p>
     <p>
@@ -17,7 +17,7 @@
     </p>
     <p>
       With best regards, <br />
-      <em>GiPro team</em>
+      <em>Smart GiPro team</em>
     </p>
   </body>
 </html>
