--- a/gi-pro-mobile/www/templates/tutorial.html
+++ b/gi-pro-mobile/www/templates/tutorial.html
@@ -11,13 +11,15 @@
           <div class="description">{{'tutorial_s1_1' | translate}}</div>
           <!--<div class="description">{{'tutorial_s1_2' | translate}}</div>-->
           <!--<div class="description">{{'tutorial_s1_3' | translate}}</div>-->
-          <img src="http://lorempixel.com/400/250/business" />
+          <!--<img src="http://lorempixel.com/400/250/business" />-->
+          <img src="img/cittadino.png" />
         </div>
       </ion-slide-page>
       <ion-slide-page>
         <div class="tutorial-content">
           <div class="description">{{'tutorial_s2' | translate}}</div>
-          <img src="http://lorempixel.com/400/251/business" />
+          <!--<img src="http://lorempixel.com/400/251/business" />-->
+          <img src="img/professionista.png" />
         </div>
       </ion-slide-page>
       <!--
