--- a/gi-pro-mobile/www/templates/include_professional.html
+++ b/gi-pro-mobile/www/templates/include_professional.html
@@ -2,9 +2,9 @@
   <div class="professional-details">
     <div class="card professional">
       <div class="item item-thumbnail-left">
-        <img ng-src="{{profile.imageUrl}}" ng-if="!isMyProfile">
+        <img ng-src="{{generateImageUrl(profile.imageUrl)}}" ng-if="!isMyProfile">
         <div ng-if="isMyProfile" class="profile-image-container" ng-click="uploadImage()">
-          <div class="upload" style="background-image:url({{profile.imageUrl}})"><i class="icon ion-camera"></i></div>
+          <div class="upload" style="background-image:url({{generateImageUrl(profile.imageUrl)}})"><i class="icon ion-camera"></i></div>
         </div>
         <!--
         <p></p>
