New icons, new splashscreen, new "my position" marker

--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -754,6 +754,7 @@ placeautocomplete {
     font-size: 20px;
     color: $dark;
     background-color: $stable;
+    background-size: 80px 80px;
     .icon {
       position: absolute;
       bottom: 0;
