--- a/gi-pro-mobile/www/templates/login.html
+++ b/gi-pro-mobile/www/templates/login.html
@@ -8,7 +8,7 @@
     <div class="padding form">
       <div class="list list-inset">
         <label class="item item-input">
-          <input type="text" ng-model="user.email" placeholder="{{'pec_placeholder' | translate}}">
+          <input type="email" ng-model="user.email" placeholder="{{'pec_placeholder' | translate}}">
         </label>
         <label class="item item-input">
           <input type="password" ng-model="user.password" placeholder="{{'password' | translate}}">
