Fix for insufficient balance

--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -961,6 +961,9 @@ placeautocomplete {
     float: right;
     font-style: italic;
   }
+  .error.item.item-icon-left {
+    white-space: normal;
+  }
 }
 
 .popup-types,
