--- a/gi-pro-mobile/www/templates/tutorial.html
+++ b/gi-pro-mobile/www/templates/tutorial.html
@@ -39,7 +39,8 @@
       </div>
       <div class="row row-center">
         <div class="col">
-          <button class="button button-block button-assertive" ui-sref="app.serviceAndProf">{{'enter_no_login' | translate}}</button>
+          <!--ui-sref="app.serviceAndProf"-->
+          <button class="button button-block button-assertive" ng-click="enterWithoutLogin()">{{'enter_no_login' | translate}}</button>
         </div>
       </div>
     </div>
