--- a/gi-pro-mobile/www/templates/request.html
+++ b/gi-pro-mobile/www/templates/request.html
@@ -1,4 +1,5 @@
-<ion-view view-title="{{isToMe() ? 'request_detail_tome' : 'request_detail_mine' | translate}}" class="request details">
+<ion-view class="request details">
+  <ion-nav-title>{{isToMe() ? 'request_detail_tome' : 'request_detail_mine' | translate}}</ion-nav-title>
   <ion-nav-buttons side="right">
   </ion-nav-buttons>
   <ion-content class="padding">
