--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{title}}" class="serviceandprofessional" hide-back-button="true">
+<ion-view view-title="{{(searchBar.show ? '' : 'app') | translate}}" class="serviceandprofessional" hide-back-button="true">
   <ion-nav-bar class="bar bar-header bar-calm" ng-class="{'item-input-inset': searchBar.show}">
     <ion-nav-back-button>
     </ion-nav-back-button>
@@ -9,14 +9,15 @@
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
       <div class="item-input-wrapper" ng-if="searchBar.show">
-        <input type="search" ng-model="searchBar.searchString" placeholder="{{'search_professionals' | translate}}">
+        <input type="search" ng-model="searchBar.searchString" ng-change="searchProfessionals(searchBar.searchString)" placeholder="{{'search_professionals' | translate}}">
       </div>
-      <button class="button button-clear button-icon ion-close" ng-click="searchBar.searchString = ''" ng-show="searchBar.show"></button>
-      <button class="button button-clear button-icon ion-search" ng-click="toggleSearchBar()" ng-show="!searchBar.show && (activeTab == 'professionals')" ng-disabled="false"></button>
-      <!-- not in this phase -->
-      <!--<button class="button button-icon button-clear ion-android-funnel" ng-click="orderServices()" ng-hide="professionalTab"></button>-->
-      <button class="button button-clear button-icon" ng-class="{'ion-map': viewAsList, 'ion-ios-list-outline': !viewAsList}" ng-click="switchToMap()"
-        ng-hide="searchBar.show"></button>
+      <button class="button button-clear button-icon ion-close" ng-click="clearSearchBar()" ng-show="searchBar.show"></button>
+      <button class="button button-clear button-icon ion-search" ng-click="toggleSearchBar()" ng-show="!searchBar.show && (activeTab == 'professionals')"
+        ng-disabled="false"></button>
+        <!-- not in this phase -->
+        <!--<button class="button button-icon button-clear ion-android-funnel" ng-click="orderServices()" ng-hide="professionalTab"></button>-->
+        <button class="button button-clear button-icon" ng-class="{'ion-map': viewAsList, 'ion-ios-list-outline': !viewAsList}" ng-click="switchToMap()"
+          ng-hide="searchBar.show"></button>
     </ion-nav-buttons>
   </ion-nav-bar>
   <!-- TABS -->
