--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -1,4 +1,5 @@
-<ion-view view-title="{{(searchBar.show ? '' : 'app') | translate}}" class="serviceandprofessional" hide-back-button="true">
+<ion-view class="serviceandprofessional" hide-back-button="true">
+  <ion-nav-title>{{(searchBar.show ? '' : 'app') | translate}}</ion-nav-title>
   <ion-nav-bar class="bar bar-header bar-calm" ng-class="{'item-input-inset': searchBar.show}">
     <ion-nav-back-button>
     </ion-nav-back-button>
@@ -9,7 +10,7 @@
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
       <div class="item-input-wrapper" ng-if="searchBar.show">
-        <input type="search" ng-model="searchBar.searchString" ng-change="searchProfessionals(searchBar.searchString)" placeholder="{{'search_professionals' | translate}}">
+        <input type="search" ng-model="searchBar.searchString" ng-change="searchProfessionals(searchBar.searchString)" placeholder="{{'search_placeholder' | translate}}">
       </div>
       <button class="button button-clear button-icon ion-close" ng-click="clearSearchBar()" ng-show="searchBar.show"></button>
       <button class="button button-clear button-icon ion-search" ng-click="toggleSearchBar()" ng-show="!searchBar.show && (activeTab == 'professionals')"
